Changes in version 0.2.0.11-alpha - 2007-11-??


Changes in version 0.2.0.10-alpha - 2007-11-10
  o New directory authorities:
    - Set up ides (run by Mike Perry) as the third v3 directory authority.

  o Major features:
    - Allow tunnelled directory connections to ask for an encrypted
      "begin_dir" connection or an anonymized "uses a full Tor circuit"
      connection independently. Now we can make anonymized begin_dir
      connections for (e.g.) more secure hidden service posting and
      fetching.
    - More progress on proposal 114: code from Karsten Loesing to
      implement new hidden service descriptor format.
    - Raise the default BandwidthRate/BandwidthBurst to 5MB/10MB, to
      accommodate the growing number of servers that use the default
      and are reaching it.
    - Directory authorities use a new formula for selecting which nodes
      to advertise as Guards: they must be in the top 7/8 in terms of
      how long we have known about them, and above the median of those
      nodes in terms of weighted fractional uptime.
    - Make "not enough dir info yet" warnings describe *why* Tor feels
      it doesn't have enough directory info yet.

  o Major bugfixes:
    - Stop servers from crashing if they set a Family option (or
      maybe in other situations too). Bugfix on 0.2.0.9-alpha; reported
      by Fabian Keil.
    - Make bridge users work again -- the move to v3 directories in
      0.2.0.9-alpha had introduced a number of bugs that made bridges
      no longer work for clients.
    - When the clock jumps forward a lot, do not allow the bandwidth
      buckets to become negative. Bugfix on 0.1.2.x; fixes bug 544.

  o Major bugfixes (v3 dir, bugfixes on 0.2.0.9-alpha):
    - When the consensus lists a router descriptor that we previously were
      mirroring, but that we considered non-canonical, reload the
      descriptor as canonical. This fixes bug 543 where Tor servers